@startuml
skinparam classAttributeIconSize 0
class LibraryDataHandler{
+ {abstract} addNewBook(book : Book) : int
+ {abstract} addNewCustomer(customer : Customer) : int
+ {abstract} updateBook(ID : int, updatedBook : Book) : void
+ {abstract} updateCustomer(ID : int, updatedCustomer : Customer) : void
+ {abstract} getBook(ID : int) : Book
+ {abstract} getBooks(title : String) : List<Book>
+ {abstract} getBooks() : List<Book>
+ {abstract} getTitles(title : String) : List<Book>
+ {abstract} getTitles() : List<Book>
+ {abstract} getCustomer(ID : int) : Customer
+ {abstract} getCustomerByEmail(email : String) : Customer
+ borrowBook(customer : Customer, book : Book) : void
+ returnBook(book : Book) : void
}
LibraryDataHandler "1" -- "*" Customer
LibraryDataHandler "1" -- "*" Book
class Customer{
- ID : int
- name : String
- lastName : String
- email : String
- books : List<Book>
+ Customer(ID : int, name : String, lastName : String, email : String, books : List<Book>)
+ Customer(name : String, lastName : String, email : String)
+ getID() : int
+ getName() : String
+ getLastName() : String
+ getEmail() : String
+ getBooks() : List<Book>
+ borrowBook(book : Book) : void
+ returnBook(book : Book) : void
+ equals(obj : Object) : boolean
+ hashCode() : int
}
Customer "1" -- "*" Book
class RunSearchCatalog{
- running : AtomicBoolean
- options : Map<String,Runnable>
+ RunSearchCatalog(library : LibraryDataHandler)
+ run() : void
}
RunSearchCatalog --> LibraryDataHandler
class RunAdd{
- options : Map<String,Runnable>
+ RunAdd(library : LibraryDataHandler)
+ run() : void
}
RunAdd --> LibraryDataHandler
class RunInf{
- options : Map<String,Runnable>
+ RunInf(library : LibraryDataHandler)
+ run() : void
}
RunInf --> LibraryDataHandler
class IO{
- {static} SCANNER : Scanner
- IO()
+ {static} out(string : String, color : Color) : void
+ {static} out(string : String) : void
+ {static} in() : String
}
class UI{
- running : AtomicBoolean
- choices : Map<String,Runnable>
+ UI(library : LibraryDataHandler)
+ run() : void
}
class ChoiceBox{
+ ChoiceBox(prompt : String, choices : Map<String,Runnable>)
}
UI --> RunCrs
UI --> RunAdd
UI --> RunInf
RunInf -->RunSearchCatalog
class Library{
- Library()
+ {static} main(args : String[]) : void
}
Library -- UI
Library -- LibraryDataHandler
class Book{
- ID : int
- title : String
- author : String
- available : boolean
- ownerID : int
+ Book(ID : int, title : String, author : String, available : boolean, ownerID : int)
+ Book(title : String, author : String)
+ getID() : int
+ getTitle() : String
+ getAuthor() : String
+ isAvailable() : boolean
+ getOwnerID() : int
+ borrowBook(customerID : int) : void
+ returnBook() : void
+ equals(obj : Object) : boolean
+ hashCode() : int
}
class RunCrs{
- options : Map<String,Runnable>
+ RunCrs(library : LibraryDataHandler)
+ run() : void
}
RunCrs --> LibraryDataHandler
class LibraryDataHandler_Mimic{
- books : List<Book>
- customers : List<Customer>
+ LibraryDataHandler_Mimic()
+ addNewBook(book : Book) : int
+ addNewCustomer(customer : Customer) : int
+ updateBook(ID : int, updatedBook : Book) : void
+ updateCustomer(ID : int, updatedCustomer : Customer) : void
+ getBook(ID : int) : Book
+ getBooks(title : String) : List<Book>
+ getBooks() : List<Book>
+ getTitles(title : String) : List<Book>
+ getTitles() : List<Book>
+ getCustomer(ID : int) : Customer
+ getCustomerByEmail(email : String) : Customer
}
LibraryDataHandler_Mimic --|> LibraryDataHandler
enum Color{
WHITE
RED
GREEN
}
Color -- IO
@enduml